# statistics-concurrent-programming-MPI

./: .gitignore  CMakeLists.txt  entrada.txt  sections_matriz_mpi_descricao.docx
statspar/: CMakeLists.txt  statspar_master.c  statspar_slave.c
statsseq/: CMakeLists.txt  statsseq.c
studentspar/: CMakeLists.txt
studentsseq/: CMakeLists.txt  studentsseq.c
